manifests/mlflow/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mlflow-server","namespace":"mlflow"},"spec":{"ports":[{"port":5000,"targetPort":5000}],"selector":{"app":"mlflow"}}}
    name: mlflow-server
    namespace: mlflow
  spec:
    clusterIP: 10.106.133.61
    clusterIPs:
    - 10.106.133.61
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: mlflow
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"tensorboard","namespace":"mlflow"},"spec":{"ports":[{"port":6006,"targetPort":6006}],"selector":{"app":"tensorboard"}}}
    name: tensorboard
    namespace: mlflow
  spec:
    clusterIP: 10.104.192.156
    clusterIPs:
    - 10.104.192.156
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 6006
      protocol: TCP
      targetPort: 6006
    selector:
      app: tensorboard
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
